kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hipster-shop
#  annotations:
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      rewrite "^(/dashboard)$" $1/ permanent;
#      rewrite "(?i)/dashboard(/|$)(.*)" /$2 break;
spec:
  rules:
    - host: shop.35.246.147.156.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
